fixed height of faq on mobile

--- a/src/scss/components/landing/faq/container/container.scss
+++ b/src/scss/components/landing/faq/container/container.scss
@@ -4,14 +4,15 @@
   position: sticky;
   // max-height: 39em;
   max-width: 51em;
-  height: 80vh;
+  max-height: fit-content;
   width: 80vw;
   background: #ffffff;
   border: 4px solid #7171cb;
   box-sizing: border-box;
   border-radius: 77px;
   @include respond(phone) {
-    height: 125vh;
+    max-height: fit-content;
+    align-content: center;
   }
 }
 
